--- a/blog.html
+++ b/blog.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>部落格</title>
-    <script type="module" crossorigin src="/2024-web-layout-training-mhw/assets/main-5fe43c98.js"></script>
-    <link rel="stylesheet" href="/2024-web-layout-training-mhw/assets/main-c015994d.css">
+    <script type="module" crossorigin src="/2024-web-layout-training-mhw/assets/main-49556ada.js"></script>
+    <link rel="stylesheet" href="/2024-web-layout-training-mhw/assets/main-bef57c58.css">
   </head>
   <body>
     <header class="header py-4">
@@ -34,19 +34,22 @@
     </div>
     
 </div>    
-    <main class="blog blog-post container padding-wrapper">
+    <main class="blog blog-post">
 
-      <h1 class="page-title">部落格</h1>
+      <div class="container padding-wrapper">
+        <h1 class="page-title container padding-wrapper">部落格</h1>
+      </div>
 
-      <div class="blog-post-container">
+      <div class="blog-post-container padding-wrapper">
         <ul class="blog-post-list d-flex fd-column">
 
           <li class="blog-post-item">
-            <div class="blog-post-card d-flex jc-sb ">
+            <div class="blog-post-card row d-flex jc-sb ">
               <a class="blog-post-img col-6 col-sm-12 d-flex" href="blog_pg1.html"><img src="/2024-web-layout-training-mhw/assets/blog-1-13919abb.png" alt="blog-post image"></a>
               <div class="blog-post-content d-flex fd-column col-6 col-sm-12">
+
                 <div class="blog-post-title d-flex jc-sb ai-fe">
-                  <div class="df fd-column ai-fs">
+                  <div class="blog-post-heading">
                     <h2><a href="blog_pg1.html">情人特別企劃</a></h2>
                     <h3>2020 Valentine’s Special</h3>
                   </div>
@@ -59,11 +62,12 @@
           </li>
 
           <li class="blog-post-item">
-            <div class="blog-post-card d-flex jc-sb ">
+            <div class="blog-post-card row d-flex jc-sb ">
               <a class="blog-post-img d-flex col-6 col-sm-12" href="#"><img src="/2024-web-layout-training-mhw/assets/blog-2-3c1c1ec4.png" alt="blog-post image"></a>
               <div class="blog-post-content d-flex fd-column col-6 col-sm-12">
+                
                 <div class="blog-post-title d-flex jc-sb ai-fe">
-                  <div class="df fd-column ai-fs">
+                  <div class="blog-post-heading">
                     <h2><a href="#">街頭潮人訪問</a></h2>
                     <h3>Street Interview</h3>
                   </div>
@@ -76,11 +80,12 @@
           </li>
 
           <li class="blog-post-item">
-            <div class="blog-post-card d-flex jc-sb ">
+            <div class="blog-post-card row d-flex jc-sb ">
               <a class="blog-post-img d-flex col-6 col-sm-12" href="#"><img src="/2024-web-layout-training-mhw/assets/blog-3-0b1c0a84.png" alt="blog-post image"></a>
               <div class="blog-post-content d-flex fd-column col-6 col-sm-12">
+
                 <div class="blog-post-title d-flex jc-sb ai-fe">
-                  <div class="df fd-column ai-fs">
+                  <div class="blog-post-heading">
                     <h2><a href="#">春季新品上市</a></h2>
                     <h3>New Selection</h3>
                   </div>
@@ -93,11 +98,12 @@
           </li>
 
           <li class="blog-post-item">
-            <div class="blog-post-card d-flex jc-sb ">
+            <div class="blog-post-card row d-flex jc-sb ">
               <a class="blog-post-img d-flex col-6 col-sm-12" href="#"><img src="/2024-web-layout-training-mhw/assets/blog-4-d6e33f7f.png" alt="blog-post image"></a>
               <div class="blog-post-content d-flex fd-column col-6 col-sm-12">
+
                 <div class="blog-post-title d-flex jc-sb ai-fe">
-                  <div class="df fd-column ai-fs">
+                  <div class="blog-post-heading">
                     <h2><a href="#">設計師獨享鏡框優惠</a></h2>
                     <h3>Sales for Designer</h3>
                   </div>
@@ -110,11 +116,12 @@
           </li>
 
           <li class="blog-post-item">
-            <div class="blog-post-card d-flex jc-sb ">
+            <div class="blog-post-card row d-flex jc-sb ">
               <a class="blog-post-img d-flex col-6 col-sm-12" href="#"><img src="/2024-web-layout-training-mhw/assets/blog-5-f399c6cc.png" alt="blog-post image"></a>
               <div class="blog-post-content d-flex fd-column col-6 col-sm-12">
+
                 <div class="blog-post-title d-flex jc-sb ai-fe">
-                  <div class="df fd-column ai-fs">
+                  <div class="blog-post-heading">
                     <h2><a href="#">抵抗夏日大作戰</a></h2>
                     <h3>Summer Special</h3>
                   </div>
