--- a/faq.html
+++ b/faq.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>常見問題</title>
-    <script type="module" crossorigin src="/2024-web-layout-training-mhw/assets/main-5fe43c98.js"></script>
-    <link rel="stylesheet" href="/2024-web-layout-training-mhw/assets/main-c015994d.css">
+    <script type="module" crossorigin src="/2024-web-layout-training-mhw/assets/main-49556ada.js"></script>
+    <link rel="stylesheet" href="/2024-web-layout-training-mhw/assets/main-bef57c58.css">
   </head>
   <body>
     <header class="header py-4">
@@ -23,14 +23,14 @@
         </ul>
     </div>
 </header>    
-    <main class="faq container padding-wrapper">
+    <main class="faq">
 
-      <div class="faq-content ">
+      <div class="faq-content container padding-wrapper">
         <h1 class="page-title">常見問題</h1>
       
         <h2>我想詢問配鏡問題</h2>
 
-        <ol class="faq-list">
+        <ol class="faq-list row">
           <li class="col-8 col-md-12 col-sm-12">
             <h3>Q1.請問可否自備鏡框單配鏡片？</h3>
             <p>
