--- a/stores.html
+++ b/stores.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>門市據點</title>
-    <script type="module" crossorigin src="/2024-web-layout-training-mhw/assets/main-5fe43c98.js"></script>
-    <link rel="stylesheet" href="/2024-web-layout-training-mhw/assets/main-c015994d.css">
+    <script type="module" crossorigin src="/2024-web-layout-training-mhw/assets/main-49556ada.js"></script>
+    <link rel="stylesheet" href="/2024-web-layout-training-mhw/assets/main-bef57c58.css">
   </head>
   <body>
     <header class="header py-4">
@@ -41,7 +41,7 @@
 
       <div class="container padding-wrapper">
         <div class="store-container">
-          <ul class="store-list d-flex jc-fs f-wrap">       
+          <ul class="store-list row d-flex jc-fs f-wrap">       
             
             <li class="store-item col-4 col-md-6 col-sm-12">
               <div class="store-card d-flex fd-column">
