--- a/store_1.html
+++ b/store_1.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>台北中山旗艦店</title>
-    <script type="module" crossorigin src="/2024-web-layout-training-mhw/assets/main-5fe43c98.js"></script>
-    <link rel="stylesheet" href="/2024-web-layout-training-mhw/assets/main-c015994d.css">
+    <script type="module" crossorigin src="/2024-web-layout-training-mhw/assets/main-49556ada.js"></script>
+    <link rel="stylesheet" href="/2024-web-layout-training-mhw/assets/main-bef57c58.css">
   </head>
   <body>
     <header class="header py-4">
@@ -43,7 +43,7 @@
 
       <div class="container padding-wrapper">
         <div class="store-container">
-          <div class="store-flex d-flex jc-sb f-wrap">       
+          <div class="store-flex row d-flex jc-sb f-wrap">       
             
             <div class="store-item col-5 col-md-12 col-sm-12">
               <div class="store-card d-flex fd-column">
