--- a/blog_pg1.html
+++ b/blog_pg1.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-hant">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>部落格</title>
-    <script type="module" crossorigin src="/2024-web-layout-training-mhw/assets/main-49556ada.js"></script>
-    <link rel="stylesheet" href="/2024-web-layout-training-mhw/assets/main-bef57c58.css">
+    <script type="module" crossorigin src="/2024-web-layout-training-mhw/assets/main-344d525c.js"></script>
+    <link rel="stylesheet" href="/2024-web-layout-training-mhw/assets/main-ff9ee1aa.css">
   </head>
   <body class="blog-pg1">
     <header class="header py-4">
     <div class="container padding-wrapper d-flex jc-sb ai-c">
         
         <a href="index.html" class="logo mr-auto">
-            <img src="/2024-web-layout-training-mhw/assets/logo-white-5423463a.png" alt="brand logo">
+            <img src="/2024-web-layout-training-mhw/assets/logo-white-5423463a.png" alt="眼鏡官網">
         </a>
         <ul class="nav d-flex">
             <li class="nav-item"><a href="product_optical.html">系列鏡框</a></li>
@@ -55,7 +55,7 @@
       <div class="article-container container padding-wrapper">
         <div class="article-column row d-flex jc-fs ai-fs">
 
-          <div class="article-main col-8 col-md-9 col-sm-12">
+          <main class="article-main col-8 col-md-9 col-sm-12">
             <div class="article-content">
             <h1 class="article-title">情人特別企劃</h1>
             <h2>2020 Valentine’s Special</h2>
@@ -92,9 +92,9 @@
               快快帶上另一半 讓彼此每一次睜開眼，都被愛的視線包圍!
             </p>
             </div>  
-          </div>  
+          </main>  
 
-          <div class="article-reltag col-4 col-md-3">
+          <aside class="article-reltag col-4 col-md-3">
           <div class="tag-title"><span class="material-symbols-outlined">label</span>TAGS</div>
           <ul class="article-reltag-list ">
             <li>
@@ -120,7 +120,7 @@
             </li>
           </ul>
 
-          </div>
+          </aside>
         </div>
       </div>
 
