--- a/product_sunglasses.html
+++ b/product_sunglasses.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-hant">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sunglasses系列</title>
-    <script type="module" crossorigin src="/2024-web-layout-training-mhw/assets/main-49556ada.js"></script>
-    <link rel="stylesheet" href="/2024-web-layout-training-mhw/assets/main-bef57c58.css">
+    <script type="module" crossorigin src="/2024-web-layout-training-mhw/assets/main-344d525c.js"></script>
+    <link rel="stylesheet" href="/2024-web-layout-training-mhw/assets/main-ff9ee1aa.css">
   </head>
   <body>
     <header class="header py-4">
     <div class="container padding-wrapper d-flex jc-sb ai-c">
         
         <a href="index.html" class="logo mr-auto">
-            <img src="/2024-web-layout-training-mhw/assets/logo-white-5423463a.png" alt="brand logo">
+            <img src="/2024-web-layout-training-mhw/assets/logo-white-5423463a.png" alt="眼鏡官網">
         </a>
         <ul class="nav d-flex">
             <li class="nav-item"><a href="product_optical.html">系列鏡框</a></li>
