--- a/week3/pages/blog_pg1.html
+++ b/week3/pages/blog_pg1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-hant">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -31,7 +31,7 @@
       <div class="article-container container padding-wrapper">
         <div class="article-column row d-flex jc-fs ai-fs">
 
-          <div class="article-main col-8 col-md-9 col-sm-12">
+          <main class="article-main col-8 col-md-9 col-sm-12">
             <div class="article-content">
             <h1 class="article-title">情人特別企劃</h1>
             <h2>2020 Valentine’s Special</h2>
@@ -68,9 +68,9 @@
               快快帶上另一半 讓彼此每一次睜開眼，都被愛的視線包圍!
             </p>
             </div>  
-          </div>  
+          </main>  
 
-          <div class="article-reltag col-4 col-md-3">
+          <aside class="article-reltag col-4 col-md-3">
           <div class="tag-title"><span class="material-symbols-outlined">label</span>TAGS</div>
           <ul class="article-reltag-list ">
             <li>
@@ -96,7 +96,7 @@
             </li>
           </ul>
 
-          </div>
+          </aside>
         </div>
       </div>
 
